# cinder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  MAC_SETUP.md  README.md  TERMS_OF_SERVICE.md  build-and-run.sh  package-lock.json  package.json  resources.qrc
.githooks/: pre-commit
migrations/: V001_initial_schema.sql  V002_stake_accounts.sql  V003_stake_account_rewards.sql  V004_stake_reward_history.sql
resources/: Cinder.entitlements.in  app-icon.icns
resources/idl/: drift_v2.json  jupiter_v6.json  magic_eden_m2.json  marinade.json  meteora_dlmm.json  pump_fun.json  raydium_clmm.json  raydium_cp_swap.json  squads_v4.json  tensor_tswap.json
scripts/: build-dmg.sh  fetch_idls.mjs  fix-style-staged.sh  fix-style.sh  generate-sitemap.mjs  publish-release.sh  publish-site.sh  release.sh
src/: CinderWalletApp.cpp  CinderWalletApp.h  Constants.h.in  StyleLoader.h  Theme.h  main.cpp
src/agents/: AiClient.cpp  AiClient.h  McpClient.cpp  McpClient.h  McpRpcHelper.cpp  McpRpcHelper.h  McpServer.cpp  McpServer.h  McpToolDefs.h  ModelProvider.cpp  ModelProvider.h  cinder-mcp-main.cpp
src/app/: AppSession.cpp  AppSession.h  AppShell.cpp  HardwareWalletCoordinator.cpp  HardwareWalletCoordinator.h
src/crypto/: HDDerivation.h  HardwareWalletPlugin.h  Keypair.cpp  Keypair.h  Mnemonic.cpp  Mnemonic.h  Pbkdf2.h  PdaDerivation.h  Signer.cpp  Signer.h  SignerManager.cpp  SignerManager.h  SoftwareSigner.cpp  SoftwareSigner.h  UnlockResult.h  WalletCrypto.cpp  WalletCrypto.h  bip39_wordlist.h
src/db/: ContactDb.cpp  ContactDb.h  Database.cpp  Database.h  DbUtil.cpp  DbUtil.h  IdlDb.cpp  IdlDb.h  McpDb.cpp  McpDb.h  NetworkStatsDb.cpp  NetworkStatsDb.h  NonceDb.cpp  NonceDb.h  NotificationDb.cpp  NotificationDb.h  PortfolioDb.cpp  PortfolioDb.h  StakeAccountDb.cpp  StakeAccountDb.h  StakeAccountRewardDb.cpp  StakeAccountRewardDb.h  SyncStateDb.cpp  SyncStateDb.h  TokenAccountDb.cpp  TokenAccountDb.h  TransactionDb.cpp  TransactionDb.h  ValidatorCacheDb.cpp  ValidatorCacheDb.h  WalletDb.cpp  WalletDb.h
src/features/activity/: ActivityHandler.cpp  ActivityHandler.h  ActivityPage.cpp  ActivityPage.h
src/features/addressbook/: AddressBookHandler.cpp  AddressBookHandler.h  AddressBookPage.cpp  AddressBookPage.h
src/features/agents/: AgentsHandler.cpp  AgentsHandler.h  AgentsPage.cpp  (+3 more)
src/models/: Activity.h  AddressBook.h  Agents.h  Assets.h  Dashboard.h  DashboardStakeItem.h  SendReceive.h  Staking.h  Swap.h  TxLookup.h  WalletTypes.h
src/services/: AvatarCache.cpp  AvatarCache.h  BackfillService.cpp  BackfillService.h  IdlRegistry.cpp  IdlRegistry.h  IrysApi.cpp  IrysApi.h  JupiterApi.cpp  JupiterApi.h  NetworkStatsService.cpp  NetworkStatsService.h  PortfolioService.cpp  PortfolioService.h  PriceService.cpp  PriceService.h  SolanaApi.cpp  SolanaApi.h  SyncService.cpp  SyncService.h  TokenMetadataService.cpp  TokenMetadataService.h  ValidatorService.cpp  ValidatorService.h
src/tx/: AccountMeta.h  AnchorIdl.h  AssociatedTokenInstruction.cpp  AssociatedTokenInstruction.h  Base58.h  CompactU16.h  ComputeBudgetInstruction.h  InstructionDecoder.h  KnownTokens.h  MetaplexMetadata.h  NonceAccount.h  ProgramIds.h  StakeInstruction.h  SystemInstruction.h  SystemOperationBuilder.cpp  SystemOperationBuilder.h  Token2022Instruction.h  Token2022Metadata.h  Token2022Types.h  TokenEncodingUtils.h  TokenGroupInstruction.h  TokenInstruction.h  TokenMetadataInstruction.h  TokenOperationBuilder.cpp  TokenOperationBuilder.h  TransactionBuilder.cpp  TransactionBuilder.h  TransactionExecutor.cpp  TransactionExecutor.h  TransactionInstruction.h  TxClassifier.h  TxExecutionConstants.h  TxParseUtils.cpp  TxParseUtils.h
src/util/: ContactResolver.cpp  ContactResolver.h  CopyButton.h  FrameRecorder.cpp  FrameRecorder.h  MacUtils.h  MacUtils.mm  SolanaErrorParser.h  TimeUtils.h  TxIconUtils.h
src/widgets/: AccountSelector.cpp  AccountSelector.h  ActionIconButton.h  AddressInput.cpp  AddressInput.h  AddressLink.cpp  AddressLink.h  AmountInput.cpp  AmountInput.h  CardListItem.cpp  CardListItem.h  ComputeUnitsBar.cpp  ComputeUnitsBar.h  ContentBorderWidget.h  Dropdown.cpp  Dropdown.h  FlapDisplay.cpp  FlapDisplay.h  NotificationFlyout.cpp  NotificationFlyout.h  PaintedPanel.h  PillButtonGroup.cpp  PillButtonGroup.h  QrCodeWidget.cpp  QrCodeWidget.h  SplineChart.cpp  SplineChart.h  StyledCalendar.cpp  StyledCalendar.h  StyledCheckbox.h  StyledLineEdit.h  TabBar.cpp  TabBar.h  ToggleSwitch.cpp  ToggleSwitch.h  TokenDropdown.cpp  TokenDropdown.h  TpsBarChart.cpp  TpsBarChart.h  TxStatusAnimationWidget.cpp  (+3 more)
styles/: account_selector.qss  activity.qss  app_shell.qss  assets.qss  base.qss  dashboard.qss  forms_wallet_addressbook.qss  lockscreen.qss  notifications.qss  sendreceive.qss  settings.qss  staking.qss  styled_calendar.qss  swap.qss  terminal.qss  theme.qss  transactions.qss  txlookup.qss  wallets.qss
tests/: MockLedgerTransport.h  MockTrezorTransport.h  TestMigrationUtils.h  VisualTestUtils.h  generate_reference_payloads.mjs  generate_token2022_payloads.mjs  test_contact_db.cpp  test_create_token_sim.cpp  test_crypto.cpp  test_database.cpp  test_feature_visual_full.cpp  test_features_decode.cpp  test_instruction_decoder.cpp  test_known_tokens.cpp  test_ledger_transport.cpp  test_mcp_db.cpp  test_sidebar_alignment.cpp  test_sleep_wake.cpp  test_solana_api.cpp  test_stake_lifecycle.cpp  test_stress.cpp  test_terminal_command_catalog.cpp  test_terminal_completion.cpp  test_theme_visual_pivot.cpp  test_token2022.cpp  test_token_account_db.cpp  test_token_dropdown.cpp  test_transaction_builder.cpp  test_transaction_executor.cpp  test_trezor_protobuf.cpp  test_trezor_usb_context.cpp  test_trezor_wire_framing.cpp  test_tx_parsing.cpp  test_wallet_restore.cpp
tests/visual-baselines/: .gitignore
translations/: Cinder_de.ts  Cinder_en.ts  Cinder_es.ts  Cinder_fr.ts  Cinder_ja.ts  Cinder_ko.ts  Cinder_pt_BR.ts  Cinder_zh_CN.ts
www/: index.html  package-lock.json  package.json  site.config.mjs
www/public/: robots.txt  sitemap.xml
www/src/: App.css  App.tsx  index.css  main.tsx
(+152 files in other folders)
